[package]
name = "os_str_bytes"
version = "6.6.1"
authors = ["dylni"]
edition = "2021"
rust-version = "1.61.0"
description = """
Convert between byte sequences and platform-native strings
"""
readme = "README.md"
repository = "https://github.com/dylni/os_str_bytes"
license = "MIT OR Apache-2.0"
keywords = ["bytes", "osstr", "osstring", "path", "windows"]
categories = ["command-line-interface", "development-tools::ffi", "encoding", "os", "rust-patterns"]
exclude = [".*", "tests.rs", "/rustfmt.toml", "/src/bin", "/tests"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "os_str_bytes_docs_rs"]
rustdoc-args = ["--cfg", "os_str_bytes_docs_rs"]

[dependencies]
memchr = { version = "2.4", optional = true }
print_bytes = { version = "1.0", optional = true }
uniquote = { version = "3.0", optional = true }

[dev-dependencies]
fastrand = "2.0"
lazy_static = "1.4"

[features]
default = ["memchr", "raw_os_str"]

nightly = []

checked_conversions = ["conversions"]
conversions = []
raw_os_str = []
